tests/fixtures/realworld/istio/valid/case-105-RW-8-Istio-Valid-50-VirtualService-retry-3-attempts.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry-vs
  namespace: default
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
  - retries:
      attempts: 3
      perTryTimeout: 2s
    route:
    - destination:
        host: reviews
        subset: v1
